--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Kclient is a wrapper for KasmVNC to add functionality to a containerized environment",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
+    "form-data": "^4.0.0",
+    "path": "^0.12.7",
     "pulseaudio2": "^0.5.5",
     "socket.io": "^4.6.0"
   },
