--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "mime-types": "^2.1.35",
     "path": "^0.12.7",
     "pulseaudio2": "^0.5.5",
     "socket.io": "^4.6.0"
